[1.9][1.8] Update build script (deploy also the AMO xpi)
http://code.google.com/p/fbug/source/detail?r=11665

--- a/extension/build.xml
+++ b/extension/build.xml
@@ -158,6 +158,7 @@
     <target name="deploy" if="deploy.dir.available">
         <copy file="${release.dir}/update.rdf" todir="${deploy-xpi.dir}" overwrite="true"/>
         <copy file="${release.dir}/firebug-${VERSION}${RELEASE}.xpi" todir="${deploy-xpi.dir}" overwrite="true"/>
+        <copy file="${release.dir}/firebug-${VERSION}${RELEASE}-amo.xpi" todir="${deploy-xpi.dir}" overwrite="true"/>
         <echo message="XPI deployed to: ${VERSION}${RELEASE} to ${deploy-xpi.dir}"/>
     </target>
 
