--- a/extension/content/firebug/branch.properties
+++ b/extension/content/firebug/branch.properties
@@ -1,6 +1,6 @@
 # DO NOT MERGE INTO TRUNK
-RELEASE=
-VERSION=1.9
+RELEASE=.a0
+VERSION=1.10
 TRUNK=
 # To allow build.xml to drop the xpi directly into the svn working copy for getfirebug.com
 # the root of the fbug svn tree must be be at the same level as the root of getfirebug.com
