SVG files need to be included in the build process

--- a/extension/build.xml
+++ b/extension/build.xml
@@ -134,6 +134,7 @@
                <include name="**/*.dtd"/>
                <include name="**/*.png"/>
                <include name="**/*.gif"/>
+               <include name="**/*.svg"/>
                <include name="**/*.ico"/>
                <include name="**/*.manifest"/>
                <include name="**/*.txt"/>
