--- a/extension/content/firebug/branch.properties
+++ b/extension/content/firebug/branch.properties
@@ -1,5 +1,5 @@
 # DO NOT MERGE INTO TRUNK
-RELEASE=.1b1
+RELEASE=.1
 VERSION=1.10
 TRUNK=
 # To allow build.xml to drop the xpi directly into the svn working copy for getfirebug.com
