--- a/extension/content/firebug/branch.properties
+++ b/extension/content/firebug/branch.properties
@@ -1,5 +1,5 @@
 # DO NOT MERGE INTO TRUNK
-RELEASE=.4b1
+RELEASE=.4
 VERSION=1.11
 TRUNK=
 # To allow build.xml to drop the xpi directly into the svn working copy for getfirebug.com
